footerとtopのページを修正

--- a/fieldWork.html
+++ b/fieldWork.html
@@ -261,21 +261,50 @@
     </div>
     <!-- 主文終了 -->
     <!-- フッター開始 -->
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-      <div class="container-fluid">
-        <div class="navbar-brand">
-           <p>
-               COPYRIGHT 2017 JSAI Special Interest Group on Crowd Co-creation<br>
-               Intelligence (SIG-CCI) ALLRIGHTS RESERVED.
-           </p>
+    <div style="height: 50px;"></div>
+    <footer class="footer">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-6 col-sm-4">
+            <p class="footer-subtitle">目次</p>
+            <ul class="footer-list">
+              <li><a href="about.html">研究会について</a></li>
+              <li><a href="schedule.html">スケジュール</a></li>
+              <li><a href="prepare.html">対馬についての予習</a></li>
+              <li><a href="fieldWork.html">フィールドワーク</a></li>
+              <li><a href="traffic.html">交通案内</a></li>
+              <li><a href="lodge.html">宿泊案内</a></li>
+              <li><a href="sponsor.html">スポンサー</a></li>
+              <li><a href="registration.html">参加申し込み</a></li>
+              <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-6 col-sm-4">
+            <p class="footer-subtitle">関連リンク</p>
+            <ul class="footer-list">
+              <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" target="_blank">市民共創知研究会</a></li>
+              <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
+              <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
+              <li><a href="https://tsushimap.herokuapp.com/" target="_blank" >TsushiMAP(つしまっぷ)</a></li>
+              <li><a href="https://www.facebook.com/events/323323891417936/" target="_blank" >Facebookページ</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-6 col-sm-4">
+            <p class="footer-subtitle">ダウンロード</p>
+            <ul class="footer-list">
+              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
+              <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="navbar-brand">
-          <p>
-            <a href="#" class="scroll" id="test">トップに戻る</a>
-          </p>
+
+        <br>
+        <div class="text-center" style="color: #777">
+          <h4 style="border-left: none;">第2回市民共創知研究会</h4>
+          <p>© 2017 JSAI Special Interest Group on Crowd Co-creation</p>
         </div>
       </div>
-    </nav>
+    </footer>
     <!-- フッター終了 -->
 </div>
 
