--- a/index.html
+++ b/index.html
@@ -146,8 +146,42 @@
     <!-- 主文開始 -->
     <div class="container">
       <div class="row">
+
+      <!-- 左メニュー始め -->
+      <div class="col-xs-12 col-sm-8">
+        <br><br>
+        <h5 class="Emphasis2" style="font-size: 15px;">
+            第2回市民共創知研究会
+        </h5>
+        <h5 class="Emphasis2" style="font-size: 30px;">
+          みらいらぼつしま
+        </h5>
+        <br>
+        <p>
+          私たち市民共創知研究会は、地域がかかえている問題に、市民の方々と一緒に取り組み、解決していくための場をつくるために活動をしています。
+          <br><br>
+          第2回の舞台は長崎県対馬市。「はたらける地域にするために」をテーマに国境の離島に乗り込み、地域を知り、課題について対話します。研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。
+          <br><br>
+          みなさんのご参加をお待ちしています。
+          <br>
+        </p>
+        <div class="overview">
+          <h5 class="Emphasis2" style="font-size: 20px; padding-top:20px;">人工知能学会 市民共創知研究会 第2回研究会</h5>
+          <p>会期：2017年6月30日(金)～7月2日(日)</p>
+          <p>会場：長崎県対馬市 西山寺ほか</p>
+          <p>主催：人工知能学会 市民共創知研究会</p>
+          <!--
+          <p>後援：対馬市、(一社)対馬観光物産協会</p>
+        -->
+          <br>
+          <p>研究会参加申し込み締め切り：6月10日</p>
+          <p>論文発表投稿申込み締め切り：6月10日</p>
+        </div>
+      </div>
+      <!-- 左メニュー終わり -->
+
       <!-- 右メニュー開始 -->
-      <div class="col-xs-12 col-md-4 col-md-push-8">
+      <div class="col-xs-12 col-sm-4">
         <h3>第2回研究会スポンサー</h3>
         <a href="http://www.okamura.co.jp/" target="_blank">
           <img src="Pictures/Logo/okamura2.png" alt="..."  class="img-responsive center-block logo">
@@ -237,42 +271,57 @@
         </div>
       </div>
       <!-- 右メニュー終わり -->
-      <div class="col-xs-12 col-md-8 col-md-pull-4">
-        <br><br>
-        <h5 class="Emphasis2" style="font-size: 15px;">
-            第2回市民共創知研究会
-        </h5>
-        <h5 class="Emphasis2" style="font-size: 30px;">
-          みらいらぼつしま
-        </h5>
-        <br>
-        <p>
-          私たち市民共創知研究会は、地域がかかえている問題に、市民の方々と一緒に取り組み、解決していくための場をつくるために活動をしています。
-          <br><br>
-          第2回の舞台は長崎県対馬市。「はたらける地域にするために」をテーマに国境の離島に乗り込み、地域を知り、課題について対話します。研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。
-          <br><br>
-          みなさんのご参加をお待ちしています。
-          <br>
-        </p>
-        <div class="overview">
-          <h5 class="Emphasis2" style="font-size: 20px; padding-top:20px;">人工知能学会 市民共創知研究会 第2回研究会</h5>
-          <p>会期：2017年6月30日(金)～7月2日(日)</p>
-          <p>会場：長崎県対馬市 西山寺ほか</p>
-          <p>主催：人工知能学会 市民共創知研究会</p>
-          <!--
-          <p>後援：対馬市、(一社)対馬観光物産協会</p>
-        -->
-          <br>
-          <p>研究会参加申し込み締め切り：6月10日</p>
-          <p>論文発表投稿申込み締め切り：6月10日</p>
-        </div>
 
-      </div>
     </div>
   </div>
     <!-- 主文終了 -->
+    <div style="height: 50px;"></div>
+    <footer class="footer">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-6 col-sm-4">
+            <p class="footer-subtitle">目次</p>
+            <ul class="footer-list">
+              <li><a href="about.html">研究会について</a></li>
+              <li><a href="schedule.html">スケジュール</a></li>
+              <li><a href="prepare.html">対馬についての予習</a></li>
+              <li><a href="fieldWork.html">フィールドワーク</a></li>
+              <li><a href="traffic.html">交通案内</a></li>
+              <li><a href="lodge.html">宿泊案内</a></li>
+              <li><a href="sponsor.html">スポンサー</a></li>
+              <li><a href="registration.html">参加申し込み</a></li>
+              <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-6 col-sm-4">
+            <p class="footer-subtitle">関連リンク</p>
+            <ul class="footer-list">
+              <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" target="_blank">市民共創知研究会</a></li>
+              <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
+              <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
+              <li><a href="https://tsushimap.herokuapp.com/" target="_blank" >TsushiMAP(つしまっぷ)</a></li>
+              <li><a href="https://www.facebook.com/events/323323891417936/" target="_blank" >Facebookページ</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-6 col-sm-4">
+            <p class="footer-subtitle">ダウンロード</p>
+            <ul class="footer-list">
+              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
+              <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <br>
+        <div class="text-center" style="color: #777">
+          <h4 style="border-left: none;">第2回市民共創知研究会</h4>
+          <p>© 2017 JSAI Special Interest Group on Crowd Co-creation</p>
+        </div>
+      </div>
+    </footer>
+
     <!-- フッター開始 -->
-    <nav class="navbar navbar-default navbar-fixed-bottom">
+<!--     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container-fluid">
         <div class="navbar-brand">
            <p>
@@ -286,8 +335,9 @@
           </p>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- フッター終了 -->
+
   </div>
   <!-- 通常画面終了 -->
 
