全体の細かいページの修正

--- a/fieldWork.html
+++ b/fieldWork.html
@@ -94,6 +94,8 @@
         <div class="col-md-8 col-md-offset-2">
         <h4 class="fw-title" id="article0" style="margin-top: 10px;">フィールドワーク行程</h4>
           <img class="img-responsive" src="Pictures/FieldWork/FWTimetable.jpg" alt="写真">
+          <br><br>
+
           <!-- フィールドワーク01,02 -->
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-6 fw-box">
@@ -104,8 +106,8 @@
                 対馬空港からは佐護のヤマネコセンターに向かいます。昼食は対馬特産黄金あなごを味わいます。
                 午後は半日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
               </p>
-
-              <h4 class="fw-title-sm" style="text-decoration: underline;">全日コース</h4>
+<!-- 
+              <h4 class="fw-title-sm" style="text-decoration: underline;">全日コース</h4> -->
               <img class="img-responsive" src="Pictures/FieldWork/FieldWork1.png" alt="写真">
             </div>
 
@@ -119,8 +121,9 @@
                 福岡2便、長崎2便の飛行機で来島の方は対馬空港までお迎えに上がります。ジェットフォイルで来島の方は徒歩でふれあい処に集まってください。
                 ふれあい処で対馬の郷土料理を味わった後、全日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
               </p>
-
-              <h4 class="fw-title-sm" style="text-decoration: underline;">半日コース</h4>
+<!-- 
+              <h4 class="fw-title-sm" style="text-decoration: underline;">半日コース</h4> -->
+              <br>
               <img class="img-responsive" src="Pictures/FieldWork/FieldWork2.png" alt="写真">
             </div>
           </div><!-- div class="row" id="article1"> -->
@@ -136,21 +139,19 @@
           </div>
           <div class="row">
             <div class="col-md-6 col-lg-6">
+              <h4 class="fw-title-sm" style="text-decoration: underline;">晴天時</h4>
               <p class="item_txt">
                 ＜晴天時＞奈良時代の朝鮮式山城と明治時代の砲台が残る金田城をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、金田城に移動、城山を登ります。下山後は厳原中心部で解散となります。
               </p>
-
-              <h4 class="fw-title-sm" style="text-decoration: underline;">晴天時</h4>
-                <img class="img-responsive" src="Pictures/FieldWork/Fieldwork3-1.jpg" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/Fieldwork3-1.jpg" alt="写真">
             </div>
 
             <div class="col-md-6 col-lg-6">
+              <h4 class="fw-title-sm" style="text-decoration: underline;">雨天時</h4>
               <p class="item_txt">
                 ＜雨天時＞対馬の神話、伝説の地をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。
                 対馬の魚介を味わった後、海運の要所であった西の漕手、住吉神社を見学し、竜宮伝説が残る和多都美神社を訪れます。天気が良くなれば烏帽子岳展望台から浅茅湾のリアス地形をご確認いただけます。その後、厳原中心部で解散となります。
               </p>
-
-              <h4 class="fw-title-sm" style="text-decoration: underline;">雨天時</h4>
               <img class="img-responsive" src="Pictures/FieldWork/FieldWork3-2.jpg" alt="写真">
             </div>
           </div>
@@ -261,7 +262,6 @@
     </div>
     <!-- 主文終了 -->
     <!-- フッター開始 -->
-    <div style="height: 50px;"></div>
     <footer class="footer">
       <div class="container">
         <div class="row text-center">
