--- a/schedule.html
+++ b/schedule.html
@@ -106,21 +106,23 @@ ga('send', 'pageview');
             <br><br>
           </p>
           <!-- ７月１日(土) -->
-          <h4 id="article3">7月1日(土)</h4>
-          <div class="row" align="center">
-            <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/Schedule/Timetable0701.jpg" alt="写真"></div>
-          </div>
-          <!-- ７月2日(日) -->
-          <h4 id="article4">7月2日(日)</h4>
-          <div class="row" align="center">
-            <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/Schedule/Timetable0702.jpg" alt="写真"></div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h4 id="article3">7月1日(土)</h4>
+              <img src="Pictures/Schedule/Timetable0701.jpg" alt="写真">
+            </div>
+            <div class="col-sm-6">
+            <!-- ７月2日(日) -->
+              <h4 id="article4">7月2日(日)</h4>
+              <img src="Pictures/Schedule/Timetable0702.jpg" alt="写真">
+            </div>
           </div>
           <!--
           <a href="./Files/About/20170322_Timetable.pdf" class="Link1">タイムテーブルのpdf</a>
         -->
           <!-- 論文募集要項 -->
           <div class="btn-group">
-            <button type="button" class="btn btn-info" onclick="window.open('./Files/About/20170322_Timetable.pdf')">タイムテーブルのpdf　</button>
+            <button type="button" class="btn btn-info" onclick="window.open('./Files/About/20170322_Timetable.pdf')">研究会タイムテーブルのpdf　</button>
             <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
               <span class="caret"></span>
               <span class="sr-only">Toggle Dropdown</span>
@@ -159,7 +161,6 @@ ga('send', 'pageview');
     </div>
     <!-- 主文終了 -->
     <!-- フッター開始 -->
-    <div style="height: 50px;"></div>
     <footer class="footer">
       <div class="container">
         <div class="row text-center">
