地域活性化センターのバナーを追加した。離島センターへのリンクを追加した。 pdfファイルを更新した。

--- a/registration.html
+++ b/registration.html
@@ -94,15 +94,15 @@ ga('send', 'pageview');
           <h3>イベント概要</h3>
           <div class="overview">
             <br>
-            <dt>名称：</dt><dd>みらいらぼつしま(人工知能学会市民共創知研究会第2回研究会)</dd>
-            <dt>とき：</dt><dd>2017年6月30日(金)～7月2日(日)</dd>
-            <dt>ところ：</dt><dd>
+            <dt>名称：</dt><dd class="list">みらいらぼつしま(人工知能学会市民共創知研究会第2回研究会)</dd>
+            <dt>とき：</dt><dd class="list">2017年6月30日(金)～7月2日(日)</dd>
+            <dt>ところ：</dt><dd class="list">
               長崎県対馬市宿坊西山寺<br>
               〒817-0022 長崎県対馬市厳原町国分1543<br>
               対馬までの交通アクセス：「研究会のしおり」もしくは以下のURL参照<br>
               <a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/traffic.html">http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/traffic.html</a>
-              <dd>
-            <dt>主催：</dt><dd>人工知能学会市民共創知研究会(SIG-CCI)</dd>
+            </dd>
+            <dt>主催：</dt><dd class="list">人工知能学会市民共創知研究会(SIG-CCI)</dd>
             <!--
             <dt>後援：</dt><dd>対馬市、一般社団法人対馬観光物産協会</dd>
           -->
@@ -116,11 +116,11 @@ ga('send', 'pageview');
           <h3>参加申し込み</h3>
           <div class="overview">
             <br>
-            <dt>参加申込締切：</dt><dd>2017年6月10日（土）</dd><dd class="warning">＊フィールドワークの調整のため、早期の参加申し込みにご協力ください</dd>
-            <dt>参加申込フォーム：</dt><dd><a class="Link2" href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a>  <dd class="warning">
+            <dt>参加申込締切：</dt><dd class="list">2017年6月10日（土）</dd><dd class="warning">＊フィールドワークの調整のため、早期の参加申し込みにご協力ください</dd>
+            <dt>参加申込フォーム：</dt><dd class="list"><a class="Link2" href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a>  <dd class="warning list">
                 ※企業や大学などのネットワークではアクセスできない場合があります。アクセスできない方は、お手数ですが、インターネット経由で再度接続を試していただけますようお願いいたします。
               </dd></dd>
-            <dt>発表原稿投稿締切：</dt><dd>2017年6月10日（土）</dd>
+            <dt>発表原稿投稿締切：</dt><dd class="list">2017年6月10日（土）</dd>
           </div>
         </section>
 
@@ -168,8 +168,8 @@ ga('send', 'pageview');
             <div class="overview">
               <br>
               <dt>お問い合わせ先：</dt>
-              <dd>Email: siramatu@nitech.ac.jp（名工大白松）</dd>
-              <dd>Tel: 052-735-7968（名工大伊藤孝行研究室）</dd>
+              <dd class="list">Email: siramatu@nitech.ac.jp（名工大白松）</dd>
+              <dd class="list">Tel: 052-735-7968（名工大伊藤孝行研究室）</dd>
             </div>
         </section>
 
@@ -241,8 +241,8 @@ ga('send', 'pageview');
           <div class="col-xs-6 col-sm-4">
             <p class="footer-subtitle">ダウンロード</p>
             <ul class="footer-list">
-              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
-              <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
             </ul>
           </div>
         </div>
