--- a/index.html
+++ b/index.html
@@ -167,15 +167,21 @@
         </p>
         <div class="overview">
           <h5 class="Emphasis2" style="font-size: 20px; padding-top:20px;">人工知能学会 市民共創知研究会 第2回研究会</h5>
-          <p>会期：2017年6月30日(金)～7月2日(日)</p>
-          <p>会場：長崎県対馬市 西山寺ほか</p>
-          <p>主催：人工知能学会 市民共創知研究会</p>
-          <!--
-          <p>後援：対馬市、(一社)対馬観光物産協会</p>
-        -->
-          <br>
-          <p>研究会参加申し込み締め切り：6月10日</p>
-          <p>論文発表投稿申込み締め切り：6月10日</p>
+          <dl class="">
+            <dt>会期：</dt>
+              <dd>2017年6月30日(金)～7月2日(日)</dd>
+            <dt>会場：</dt>
+                <dt>7月1日　対話セッション　宝泉寺</dt>
+                <dd>〒817-0014 長崎県対馬市厳原町天道茂467</dd>
+                <dt>7月2日　共創セッション　西山寺</dt>
+                <dd>〒817-0022 長崎県対馬市厳原町国分1453</dd>
+            <dt>主催：</dt>
+              <dd>人工知能学会 市民共創知研究会</dd>
+            <dt>研究会参加申し込み締め切り：</dt>
+              <dd>6月10日</dd>
+            <dt>論文発表投稿申込み締め切り：</dt>
+              <dd>6月10日</dd>
+          </dl>
         </div>
       </div>
       <!-- 左メニュー終わり -->
@@ -194,11 +200,9 @@
         <div class="text-center" style="color: #777;">富士ゼロックス株式会社</div>
 
         <h3>後援</h3>
-        <a href="http://www.okamura.co.jp/" target="_blank">
+        <a href="http://www.tsushima-net.org/" target="_blank">
           <img src="Pictures/Logo/kanbutsu_banner.gif" alt="..."  class="img-responsive center-block logo">
         </a>
-<!--         <br>
-        <div class="text-center" style="color: #777;">対馬観光物産協会</div> -->
 
         <br>
 
@@ -207,18 +211,20 @@
               <a href="http://www.city.tsushima.nagasaki.jp/" target="_blank">対馬市</a>
           </div>
         </div>
-<!--         <br>
-        <div class="text-center" style="color: #777;">対馬市</div> -->
+
+        <br>
+
+        <a href="https://www.jcrd.jp/" target="_blank">
+          <img src="Pictures/Logo/local_banner.gif" alt="..."  class="img-responsive center-block logo">
+        </a>
 
         <br>
 
         <div class="text-center">
-          <div class="log-wrap" style="font-size: 13px;">
-              <a href="https://www.jcrd.jp/" target="_blank" style="padding-top: 5px;">(財)地域活性化センター</a>
+          <div class="log-wrap">
+              <a href="http://www.nijinet.or.jp/" target="_blank">日本離島センター</a>
           </div>
         </div>
-<!--         <br>
-        <div class="text-center" style="color: #777;">(財)地域活性化センター</div> -->
 
         <h3>目次</h3>
         <ul>
@@ -246,27 +252,27 @@
         <!-- Split button -->
         <!-- 研究会のしおり -->
         <div class="btn-group">
-          <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170522_SIGCCI02_Guide.pdf')">研究会のしおり</button>
+          <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170606_SIGCCI02_Guide.pdf')">研究会のしおり</button>
           <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
-            <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" download="20170522_SIGCCI02_Guide.pdf">ダウンロード</a></li>
+            <li><a href="Files/Common/20170606_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/Common/20170606_SIGCCI02_Guide.pdf" download="20170606_SIGCCI02_Guide.pdf">ダウンロード</a></li>
           </ul>
         </div>
         <br><br>
         <!-- 論文募集要項 -->
         <div class="btn-group">
-          <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170415_SICCCI02_CFP.pdf')">論文募集要項　</button>
+          <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170606_SIGCCI02_CFP.pdf')">論文募集要項　</button>
           <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">オープン</a></li>
-            <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" download="20170415_SICCCI02_CFP.pdf">ダウンロード</a></li>
+            <li><a href="Files/Common/20170606_SIGCCI02_CFP.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/Common/20170606_SIGCCI02_CFP.pdf" download="20170606_SIGCCI02_CFP.pdf">ダウンロード</a></li>
           </ul>
         </div>
       </div>
@@ -306,8 +312,8 @@
           <div class="col-xs-6 col-sm-4">
             <p class="footer-subtitle">ダウンロード</p>
             <ul class="footer-list">
-              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
-              <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
             </ul>
           </div>
         </div>
