--- a/prepare.html
+++ b/prepare.html
@@ -119,7 +119,7 @@ ga('send', 'pageview');
             <br>
             <div class="accordion">
               <div class="ac-content">
-                <input id="ac-cap1">
+                <input id="ac-cap1" type="checkbox" checked="checked">
                 <label for="ac-cap1" id="article2_1">
                   3月2日(木)
                   <span class="glyphicon glyphicon-chevron-right"></span>
@@ -842,8 +842,8 @@ ga('send', 'pageview');
           <div class="col-xs-6 col-sm-4">
             <p class="footer-subtitle">ダウンロード</p>
             <ul class="footer-list">
-              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
-              <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
             </ul>
           </div>
         </div>
