--- a/sponsor.html
+++ b/sponsor.html
@@ -92,8 +92,8 @@
             <h3>市民共創知研究会　第二回研究会　開催概要</h3>
             <div class="overview">
               <br>
-              <dt>日程：</dt><dd>2017年6月30日（金）～7月2日（日）</dd>
-              <dt>会場：</dt><dd>西山寺（長崎県対馬市厳原町国分1453）ほか</dd>
+              <dt>日程：</dt><dd class="list">2017年6月30日（金）～7月2日（日）</dd>
+              <dt>会場：</dt><dd class="list">西山寺（長崎県対馬市厳原町国分1453）ほか</dd>
             </div>
           </section>
 
@@ -211,8 +211,8 @@
           <div class="col-xs-6 col-sm-4">
             <p class="footer-subtitle">ダウンロード</p>
             <ul class="footer-list">
-              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
-              <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_Guide.pdf" target="_blank">研究会のしおり</a></li>
+              <li><a href="Files/Common/20170606_SIGCCI02_CFP.pdf" target="_blank">論文募集要項</a></li>
             </ul>
           </div>
         </div>
