スケジュールのページに企業セッションのパンフレットを追加した。 トップページの画像を差し替えた。

--- a/schedule.html
+++ b/schedule.html
@@ -65,7 +65,8 @@ ga('send', 'pageview');
             <li><a href="#article3" class="scroll" data-offset="50">7月1日(土)</a></li>
             <li><a href="#article4" class="scroll" data-offset="50">7月2日(日)</a></li>
             <li><a href="#article5" class="scroll" data-offset="50">対話セッション　タイムテーブル</a></li>
-            <li><a href="#article6" class="scroll" data-offset="50">問い合わせ</a></li>
+            <li><a href="#article6" class="scroll" data-offset="50">スポンサーセッション</a></li>
+            <li><a href="#article7" class="scroll" data-offset="50">問い合わせ</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -147,6 +148,43 @@ ga('send', 'pageview');
         </section>
 
         <section id="article6">
+          <h3>スポンサーセッション</h3>
+          <h4>富士ゼロックス提供セッション　「チームみらい創り」、始まります。</h4>
+          <p>
+            このセッションでは、みらい創りがどのようなものなのかを参加者の皆さまに感じ取って頂きたく、今行われている様々なみらい創りの実践を、現場からお届けします。
+          </p>
+          <!-- 富士ゼロックスセッション -->
+          <div class="btn-group">
+            <button type="button" class="btn btn-info" onclick="window.open('./Files/Schedule/Xerox-Session.pdf')">富士ゼロックス　セッションパンフレット</button>
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="./Files/Schedule/Xerox-Session.pdf" target="_blank">オープン</a></li>
+              <li><a href="./Files/Schedule/Xerox-Session.pdf" download="./Files/Shedule/Xerox-Session.pdf">ダウンロード</a></li>
+            </ul>
+          </div>
+
+          <h4>岡村製作所提供セッション　地域ではたらいていくために</h4>
+          <p>
+            このセッションではまず、「はたらく」を取り巻く昨今の状況について都市、地方の隔てなく紹介したうえで、対馬ではたらくためにどんな環境が必要になるのかということを実践者の報告から明らかにしていきます。
+          </p>
+          <!-- 富士ゼロックスセッション -->
+          <div class="btn-group">
+            <button type="button" class="btn btn-info" onclick="window.open('./Files/Schedule/Okamura-Session.pdf')">岡村製作所　セッションパンフレット</button>
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="./Files/Schedule/Okamura-Session.pdf" target="_blank">オープン</a></li>
+              <li><a href="./Files/Schedule/Okamura-Session.pdf" download="./Files/Shedule/Okamura-Session.pdf">ダウンロード</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section id="article7">
           <h3>問い合わせ</h3>
           <p>研究会の内容やスケジュール、参加に際して気になる点がありましたら、下記アドレスまでお問い合わせください。</p>
           <h5 class="Emphasis">ikeko20471120[at]gmail.com</h5>
