--- a/index.html
+++ b/index.html
@@ -65,11 +65,6 @@
               <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/submission.html">原稿執筆案内</a></li>
               <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
             </ul>
-            <!--
-            <ul class="nav navbar-nav navbar-right ExLink">
-              <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
-            </ul>
-          -->
           </div>
 
           <!-- サイドメニュー開始 -->
@@ -111,12 +106,12 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="Pictures/Index/Top01.jpg" alt="..."　class="img-responsive　center-block">
+          <img src="Pictures/Index/Top01-2.png" alt="..."　class="img-responsive　center-block">
           <div class="carousel-caption">
           </div>
         </div>
         <div class="item">
-          <img src="Pictures/Index/ThemeTop.jpg" alt="..."　class="img-responsive　center-block">
+          <img src="Pictures/Index/ThemeTop-2.png" alt="..."　class="img-responsive　center-block">
           <div class="carousel-caption">
           </div>
         </div>
@@ -178,7 +173,7 @@
             <dt>主催：</dt>
               <dd>人工知能学会 市民共創知研究会</dd>
             <dt>研究会参加申し込み締め切り：</dt>
-              <dd>6月10日</dd>
+              <dd>6月18日</dd>
             <dt>論文発表投稿申込み締め切り：</dt>
               <dd>6月10日</dd>
           </dl>
